--- a/core/components/googlesitemap/docs/changelog.txt
+++ b/core/components/googlesitemap/docs/changelog.txt
@@ -1,6 +1,11 @@
 Changelog for GoogleSiteMap.
 
-GoogleSiteMap 2.0.0
+GoogleSiteMap 2.1.0
+====================================
+- Fix multi-context issue
+- Add cachemanager Plugin
+
+GoogleSiteMap 2.0.2
 ====================================
 - Complete rewrite based on Garry's blazing fast sitemap code
 - Added cachemanager
@@ -41,5 +46,5 @@ GoogleSiteMap 1.1
 GoogleSiteMap 1.0
 ====================================
 - Updated package build for Revo RC1
-- Added fix for when editedon is empty (thanks Andrey Federov!) 
+- Added fix for when editedon is empty (thanks Andrey Federov!)
 - Added changelog
